--- a/composer.json
+++ b/composer.json
@@ -5,8 +5,10 @@
     "license": "MIT",
     "type": "project",
     "require": {
-        "php": ">=5.6.*",
-        "laravel/framework": "5.2.*"
+        "php": ">=5.5.9",
+        "laravel/framework": "5.2.*",
+        "laravelcollective/html": "5.2.*",
+        "components/font-awesome": "^4.5"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
