--- a/.env.example
+++ b/.env.example
@@ -1,13 +1,13 @@
 APP_ENV=local
 APP_DEBUG=true
-APP_KEY=SomeRandomString
-APP_URL=http://localhost
+APP_KEY=0MMngYh6wbrUVK1nVpBSpOGukSuMqk97
+APP_URL=http://csen1059.app
 
-DB_HOST=127.0.0.1
+DB_HOST=localhost
 DB_PORT=3306
-DB_DATABASE=homestead
-DB_USERNAME=homestead
-DB_PASSWORD=secret
+DB_DATABASE=robusta_dev
+DB_USERNAME=root
+DB_PASSWORD=
 
 CACHE_DRIVER=file
 SESSION_DRIVER=file
@@ -23,3 +23,4 @@ MAIL_PORT=2525
 MAIL_USERNAME=null
 MAIL_PASSWORD=null
 MAIL_ENCRYPTION=null
+
