replying to tickets and twitter

--- a/storage/settings.json
+++ b/storage/settings.json
@@ -1,1 +1,35 @@
-{"COLOR_1_DESCRIPTION":"nav_bar","COLOR_2_DESCRIPTION":"nav_bar_links","COLOR_3_DESCRIPTION":"nav_bar_links_effects","COLOR_4_DESCRIPTION":"side_bar_hover","COLOR_5_DESCRIPTION":"logo_hover","COLOR_6_DESCRIPTION":"left_side","COLOR_7_DESCRIPTION":"li.header_in_siderbar_color","COLOR_8_DESCRIPTION":"li.header_in_siderbar_background","COLOR_9_DESCRIPTION":"active_hover_li_in_sidebar","COLOR_10_DESCRIPTION":"treeview-menu","COLOR_11_DESCRIPTION":"links_in_sidebar","COLOR_12_DESCRIPTION":"links_in_treeview-menu","COLOR_13_DESCRIPTION":"sidebar_form_boder","COLOR_14_DESCRIPTION":"text_input_sidebar_form","COLOR_15_DESCRIPTION":"sidebar_btn","COLOR_16_DESCRIPTION":"logo_hover","color_1":"#759dcc","color_2":"#ffffff","color_3":"#f6f6f6","color_4":"#558748","color_5":"#99d897","color_6":"#222d32","color_7":"#506f4b","color_8":"#1a2226","color_9":"#1e282c","color_10":"#2c3b41","color_11":"#b8c7ce","color_12":"#8aa4af","color_13":"#374850","color_14":"#666666","color_15":"#999999","color_16":"#38b85a"}
+{
+  "COLOR_1_DESCRIPTION": "nav_bar",
+  "COLOR_2_DESCRIPTION": "nav_bar_links",
+  "COLOR_3_DESCRIPTION": "nav_bar_links_effects",
+  "COLOR_4_DESCRIPTION": "side_bar_hover",
+  "COLOR_5_DESCRIPTION": "logo_hover",
+  "COLOR_6_DESCRIPTION": "left_side",
+  "COLOR_7_DESCRIPTION": "li.header_in_siderbar_color",
+  "COLOR_8_DESCRIPTION": "li.header_in_siderbar_background",
+  "COLOR_9_DESCRIPTION": "active_hover_li_in_sidebar",
+  "COLOR_10_DESCRIPTION": "treeview-menu",
+  "COLOR_11_DESCRIPTION": "links_in_sidebar",
+  "COLOR_12_DESCRIPTION": "links_in_treeview-menu",
+  "COLOR_13_DESCRIPTION": "sidebar_form_boder",
+  "COLOR_14_DESCRIPTION": "text_input_sidebar_form",
+  "COLOR_15_DESCRIPTION": "sidebar_btn",
+  "COLOR_16_DESCRIPTION": "logo_hover",
+  "color_1": "#759dcc",
+  "color_2": "#ffffff",
+  "color_3": "#f6f6f6",
+  "color_4": "#558748",
+  "color_5": "#99d897",
+  "color_6": "#222d32",
+  "color_7": "#506f4b",
+  "color_8": "#1a2226",
+  "color_9": "#1e282c",
+  "color_10": "#2c3b41",
+  "color_11": "#b8c7ce",
+  "color_12": "#8aa4af",
+  "color_13": "#374850",
+  "color_14": "#666666",
+  "color_15": "#999999",
+  "color_16": "#38b85a",
+  "twitter_id": 716354886334554114
+}
